Mar 20 2003  2.9.1  Various code cleanups and reorganizations
Mar 18 2003  2.9.1  Fixed new alert logic, added alert fields to the config
                     file, started moving existing alerts to new alert
                     logic.
Mar 17 2003  2.9.1  Worked on new alert throttling framework.  Alerts are 
                     probably broken right now for the client.
Mar 16 2003  2.9.1  Switched (returned) to statically allocated packet buffers
                     for a minor speed improvement.
                    Removed ability to filter outbound drone streams since it
                     would break badly if a client didn't connect immediately.
                    Restructured timer code
Mar 13 2003  2.9.1  Removed redundant select() in several capture sources
                    Fixed drone capture source dropping dead under high loads
                    Fixed wtaplocaldump compile errors
                    Wrapped swap64 in ifndef for *BSD
                    Renamed swap64 and local *to*64 to avoid bsd collisions
Mar 10 2003  2.9.1  Tweaked wtaplocaldump endian headers
Mar 09 2003  2.9.1  Fixed stupidity in fuzzy mangling
                    Started new alert code framework
                    Fixed stupidity in wlan-ng 0.2.0 capture source
Mar 08 2003  2.9.1  Actually implemented max clients for server and drone
                    Only perform network protocol conversions if there are
                     clients connected to speed up headless servers.
                    Tweaked packet mangling for fifo pipe
                    Fixed client counting
                    Added log data packet mangling
                    Added tracking decrypt success/failure rate for WEP keys
Mar 07 2003  2.9.1  Added encoding, error, and rate transmission to drone 
                     protocol
                    Sanitized drone protocol for cross-endian use
                    Added kismet-local min/max functions