@@ -4,7 +4,7 @@
 # not continually reading --help!
 
 # Version of Kismet config
-version=2.9.1d
+version=2.9.1e
 
 # Name of server (Purely for organiational purposes)
 servername=Kismet
@@ -73,7 +73,6 @@ gpshost=localhost:2947
 # filter_dump    - Packets filtered at the dump level are tracked, displayed,
 #                  and written to the csv/xml/network/etc files, but not 
 #                  recorded in the packet dump
-# filter_alert   - Controls what packets can raise alerts
 # filter_export  - Controls what packets influence the exported CSV, network,
 #                  xml, gps, etc files.
 # All filtering options take arguments containing the type of address and
@@ -84,7 +83,6 @@ gpshost=localhost:2947
 # has the same effect as the previous mac_filter config file option.
 # filter_tracker=...
 # filter_dump=...
-# filter_alert=...
 # filter_export=...
 
 # Alerts to be reported and the throttling rates.
