@@ -23,8 +23,6 @@ multiple server systems.
 .PP
 "filter_dump" (string) Filter string to control packets written to the dump file.
 .PP
-"filter_alert" (string) Filter string to control packets that generate alerts.
-.PP
 "filter_export" (string) Filter string to control packets that are written to the
 exported csv, gps, xml, and network files.
 .PP
