@@ -1,4 +1,6 @@
 Mar 20 2003  2.9.1  Various code cleanups and reorganizations
+                    Removed alert filter string, too unwieldy from the code
+                     and redundant
 Mar 18 2003  2.9.1  Fixed new alert logic, added alert fields to the config
                      file, started moving existing alerts to new alert
                      logic.
